--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -11,13 +11,13 @@
     --sp-border-light: #e9e9e9;
     --sp-border-extra-light: #f2f2f2;
     --sp-scrollbar-thumb: #c2c2c2;
-    --sp-font-sans-serif:"Fira Sans",system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    --sp-font-monospace:SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
-    --sp-gradient:linear-gradient(180deg,rgba(255,255,255,0.15),rgba(255,255,255,0));
-    --sp-gradient-focus:linear-gradient(#d61523, #d61523), linear-gradient(#e9e9ea, #e9e9ea);
+    --sp-font-sans-serif: "Fira Sans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --sp-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    --sp-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
+    --sp-gradient-focus: linear-gradient(#d61523, #d61523), linear-gradient(#e9e9ea, #e9e9ea);
     --sp-shadow: 2px 5px 20px rgba(0, 0, 0, .2);
     --sp-radius: 3px;
-    --sp-transition: all .3s cubic-bezier(.645,.045,.355,1);
+    --sp-transition: all .3s cubic-bezier(.645, .045, .355, 1);
 }
 
 /* ---//--- */
@@ -51,7 +51,339 @@
 ::-webkit-scrollbar-corner {
     background-color: var(--sp-border-extra-light);
 }
+
 body {
     background: #ffffff;
 }
+
 /* ---//--- */
+
+.our_section_part {
+    width: 100%;
+    padding: 60.763px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: max-content;
+    background-color: rgb(241, 241, 241);
+}
+
+.our_section_part_inner {
+    width: 100%;
+    max-width: 75em;
+    height: 100%;
+    height: max-content;
+
+}
+
+.our_section_part_title_an_nav {
+    display: flex;
+    align-items: center;
+
+    &>h2 {
+        font-size: 44px;
+    }
+
+    &>nav>div {
+        border: 1px solid rgb(244, 80, 95);
+        width: 2.8em;
+        height: 2.8em;
+        background-image: url('/img/right_arr_icon.svg');
+        background-position: center;
+        background-size: 1.7em;
+        background-repeat: no-repeat;
+        cursor: pointer;
+        &:hover {
+            transition: all ease 0.2s;
+            filter: brightness(10%);
+        }
+    }
+
+    &>nav {
+        margin-left: 2em;
+        width: 6.2em;
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+#our_section_part_nav_left_btn {
+    rotate: 180deg;
+}
+
+.our_section_part_discription {
+    margin-top: 4em;
+    color: RGB(102, 102, 102);
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.our_section_part_main {
+    display: flex;
+    flex-direction: row;
+    margin-top: 5em;
+}
+
+.feature-wrap {
+    border: 2.4px solid rgb(199, 199, 199);
+    padding: 15px;
+    height: 40em;
+    min-width: 12em;
+    background-color: white;
+    user-select: none;
+    pointer-events: none;
+
+    &>div {
+        width: 100%;
+        height: 35em;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 5px;
+
+        &>.future-icons {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            &>img {
+                max-width: 3em;
+            }
+        }
+    }
+
+    &>h3 {
+        text-align: center;
+        width: 100%;
+    }
+}
+
+.our_section_part_main_right {
+    width: 100%;
+}
+.feature_right {
+    width: 100%;
+    height: max-content;
+    padding-left: 3em;
+    &>.feature_right_element:not(:first-child){
+        margin-top:2em ;
+    }
+}
+
+.feature_right_element {
+    height: 13.3em;
+    display: flex;
+    
+}
+
+.feature_right_element_left {
+    width: 10em;
+    flex-shrink: 0;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.feature_right_element_left_title_btn {
+    border: 2.4px solid rgb(199, 199, 199);
+    background-color: white;
+    width: 100%;
+    height: 70%;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 5px;
+
+    &:hover {
+        border: 3.4px solid rgb(199, 199, 199);
+    }
+
+    &>img {
+        max-width: 2em;
+    }
+
+    &>h4 {
+        font-size: 1em;
+        text-align: center;
+    }
+    z-index: 1;
+    &::before{
+        z-index: 0;
+        content: '';
+        background-color: rgb(199, 199, 199);
+        width: 100%;
+        height: 0.4em;
+        position: relative;
+        rotate: 90deg;
+        top: 12.9em;
+    }
+    &::after{
+        content: '';
+        background-image: url('https://cdn-gfcdj.nitrocdn.com/qrrGJpWmpjCjqXVLeiFcclxzCdkAOpud/assets/images/optimized/rev-7e78864/www.futurebridge.com/wp-content/themes/master-theme/images/Arrow.png');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+        top: 7.05em;
+        position: relative;
+        width: 1.6em;
+        height: 1.6em;
+    }
+}
+#feature_right_element_left_title_btn3{
+    &::before{
+        display: none ;
+    }
+    &::after{
+        display: none;
+    }
+}
+
+#feature_right_element_left_title_btn_arr {
+    max-width: 1.2em;
+    position: relative;
+    top: 1em;
+}
+.feature_right_element_left_title_btn_arr_3{
+    top:0em !important;
+}
+
+.feature_right_element_right {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding-bottom: 4em;
+    &::after{
+        content: '';
+        background-color: rgb(199, 199, 199);
+        width: 49.1%;
+        height: 0.4em;
+        z-index: 0;
+        position: absolute;
+    }
+}
+.features_dot{
+    z-index: 1;
+border: 2px solid rgb(244, 80, 95);
+width: 2.2em;
+height: 2.2em;
+display: flex;
+align-items: center;
+justify-content: center;
+cursor: pointer;
+&:hover{
+    border: 3px solid rgb(244, 80, 95);
+
+}
+&>div{
+    background-color: rgb(244, 80, 95);
+    width: 80%;
+    height: 80%;
+}
+}
+.feature_right_element_right_featurs_btn_an_text{
+    height: 5em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    position: relative;
+    bottom: 1em;
+    &>h4{
+        font-size: smaller;
+    }
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 720px) {
+    .our_section_part_title_an_nav {
+        &>h2 {
+            font-size: 30px;
+        }
+
+        &>nav {
+            margin-left: 0.5em;
+        }
+    }
+
+    .our_section_part_main {
+        flex-direction: column;
+    }
+
+    .feature-wrap {
+        height: 26em;
+        padding-bottom: 2em;
+
+        &>div {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+            grid-column-gap: 0px;
+            grid-row-gap: 0px;
+            height: 100%;
+        }
+
+        &>h3 {
+            text-align: center;
+            width: 100%;
+        }
+    }
+
+    .feature_right {
+        padding-left: 0px;
+    }
+
+    .feature_right_element_left {
+        display: flex;
+        width: 100%;
+    }
+
+    .feature_right_element_left_title_btn{
+        flex-direction: row;
+        &>h4 {
+            width: 60%;
+            min-height: 5em;
+            text-align: left;
+            align-content: center;
+        }
+        &::after{
+            display: none;
+        }
+        &::before{
+            display: none;
+        }
+    }
+    .feature_right_element,.feature_right_element_right{
+        flex-direction: column;
+    }
+    .feature_right_element_right{
+        &::after{
+            display: none;
+        }
+        &>.features_dot:not(:first-child){
+
+        }
+    }
+    #feature_right_element_left_title_btn_arr{
+        top: 0em;
+    }
+    /* .feature_right_element_right{
+        display: none;
+    } */
+}
