--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -205,6 +205,7 @@ body {
 
     &>img {
         max-width: 2em;
+        max-width: 2em;
     }
 
     &>h4 {
@@ -273,6 +274,7 @@ body {
         height: 0.4em;
         z-index: 0;
         position: absolute;
+        min-width: 50em;
     }
 }
 
@@ -281,6 +283,7 @@ body {
     border: 2px solid rgb(244, 80, 95);
     width: 2.2em;
     height: 2.2em;
+    margin-top: 2em;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -306,7 +309,13 @@ body {
     bottom: 1em;
 
     &>h4 {
-        font-size: smaller;
+        font-size: 0.95em;
+        /* border: 1px solid red; */
+        text-align: center;
+        height: 9em;
+        position: absolute;
+        width: 9em;
+        left: -137%;
     }
 
 }
@@ -774,51 +783,6 @@ padding-bottom: 5em;
         }
     }
 
-    .our_section_part_main {
-        flex-direction: column;
-    }
-
-    .our_section_part_main_left {
-        /* display: flex;
-        justify-content: center; */
-    }
-
-    .feature-wrap {
-        height: 26em;
-        padding-bottom: 2em;
-
-        &>div {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(3, 1fr);
-            grid-column-gap: 0px;
-            grid-row-gap: 0px;
-            height: 100%;
-        }
-
-        &>h3 {
-            text-align: center;
-            width: 100%;
-        }
-    }
-
-    .feature_right {
-        padding-left: 0px;
-    }
-
-    .feature_right_element_left {
-        display: flex;
-        width: 100%;
-    }
-
-    .our_section_part_main_right {
-        display: none;
-    }
-
-    .our_section_part_main_right_phones {
-        display: flex;
-    }
-
     #client_logo_images_part_strip_div {
         &>div>img {
             margin-left: 4.3em;
@@ -855,6 +819,47 @@ padding-bottom: 5em;
             }
         }
     }
+}
+@media (max-width: 1120px) {
+    .our_section_part_main {
+        flex-direction: column;
+    }
+
+    .feature_right {
+        padding-left: 0px;
+    }
+
+    .feature_right_element_left {
+        display: flex;
+        width: 100%;
+    }
+
+    .our_section_part_main_right {
+        display: none;
+    }
+
+    .our_section_part_main_right_phones {
+        display: flex;
+    }
+.feature-wrap {
+        height: 26em;
+        padding-bottom: 2em;
+
+        &>div {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+            grid-column-gap: 0px;
+            grid-row-gap: 0px;
+            height: 100%;
+        }
+
+        &>h3 {
+            text-align: center;
+            width: 100%;
+        }
+    }
+
 }
 
 @media (max-width: 480px) {
