update  bug fixed

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -581,7 +581,8 @@ body::-webkit-scrollbar {
     align-items: center;
     padding: 2em 1em;
     user-select: none;
-    &>h4{
+
+    &>h4 {
         text-align: center;
     }
 }
@@ -691,12 +692,15 @@ body::-webkit-scrollbar {
     grid-column-gap: 15px;
     grid-row-gap: 20px;
     padding: 1em;
-padding-bottom: 5em;
+    padding-bottom: 5em;
+
     &>figure {
         overflow: hidden;
-        &>img{
+
+        &>img {
             user-select: none;
         }
+
         &>section {
             position: absolute;
             overflow: hidden;
@@ -722,12 +726,13 @@ padding-bottom: 5em;
                     list-style: none;
                     margin-top: 1em;
                     user-select: none;
+
                     &>a {
                         &>img {
                             filter: invert();
                             width: 100%;
                             max-width: 1em;
-                            
+
                         }
                     }
                 }
@@ -749,7 +754,8 @@ padding-bottom: 5em;
         }
     }
 }
-.heroSection_getStarted_text{
+
+.heroSection_getStarted_text {
     background-color: rgb(214, 21, 35);
     padding: 0.6em 1em;
     font-size: large;
@@ -826,6 +832,7 @@ padding-bottom: 5em;
         }
     }
 }
+
 @media (max-width: 1120px) {
     .our_section_part_main {
         flex-direction: column;
@@ -847,7 +854,8 @@ padding-bottom: 5em;
     .our_section_part_main_right_phones {
         display: flex;
     }
-.feature-wrap {
+
+    .feature-wrap {
         height: 26em;
         padding-bottom: 2em;
 
@@ -883,10 +891,17 @@ padding-bottom: 5em;
             }
         }
     }
+
     #client_logo_images_part_strip_div {
         &>div>img {
             max-width: 6em;
             margin-left: 3em;
+        }
+    }
+
+    #ourServices_modal_middle_box_content_points{
+        &>section:not(:first-child){
+            margin-top: -1.5em;
         }
     }
 }
