--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -760,6 +760,9 @@ body::-webkit-scrollbar {
     padding: 0.6em 1em;
     font-size: large;
     font-weight: 600;
+    &:hover{
+        color: white !important;
+    }
 }
 
 
