--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -761,7 +761,9 @@ body::-webkit-scrollbar {
     font-size: large;
     font-weight: 600;
     &:hover{
+        background-color: black !important;
         color: white !important;
+        font-size: 1.3em;
     }
 }
 
